# weriety

./: .gitignore  CMakeLists.txt  LICENSE  README.md  werietyconfig.h.in
plugin/: CMakeLists.txt  config.h  dllmain.cpp  exception_handler.cpp  exception_handler.h  handle.cpp  handle.h  just_test.cpp  just_test.h  wer_plugin_facade.h  wer_plugin_facade_impl.cpp  wer_plugin_facade_impl.h
sample/: CMakeLists.txt  README.md
sample/src/: main.cpp
test/: CMakeLists.txt  test_init.cpp
